force-app/main/default/objects/Participant__c/Participant__c.object-meta.xml
<CustomObject>
    <label>Participant</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>