force-app/main/default/objects/Participant__c/fields/Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>Certification_Number__c</fullName>
    <label>Certification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>