force-app/main/default/objects/Participant__c/fields/Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_Time__c</fullName>
    <label>Registration Date-Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>