force-app/main/default/objects/Participant__c/fields/Training_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_Start_Date_Time__c</fullName>
    <formula>Training__r.Start_Date__c</formula>
    <label>Training Start Date-Time</label>
    <type>DateTime</type>
</CustomField>