force-app/main/default/objects/Participant__c/validationRules/Open_Training_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Training_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( Training__r.Status__c , &apos;Active&apos;))</errorConditionFormula>
    <errorDisplayField>Training__c</errorDisplayField>
    <errorMessage>choosed training is not active</errorMessage>
</ValidationRule>