force-app/main/default/objects/Participant__c/validationRules/Training_Overfilled_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_Overfilled_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>Training__r.Free_Places__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Training__c</errorDisplayField>
    <errorMessage>Choosed Training Overfilled, You Cant Add Participants</errorMessage>
</ValidationRule>