force-app/main/default/objects/Participant__c/listViews/Participants.listView-meta.xml
<ListView>
    <fullName>Participants</fullName>
    <columns>NAME</columns>
    <columns>Training__c</columns>
    <columns>Contact__c</columns>
    <columns>GPA__c</columns>
    <columns>Registration_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Participants</label>
</ListView>